OOBE NetworkScreen: Unsubscribe from network notifications on Hide

Screen continue to get network notification even when it is hidden. Also
`continue_pressed_` state remains true after first proceeding. It
probably leads to wrong behavior, when user goes back to NetworkScreen.

Bug: 827949
Change-Id: Id9fcff50f445bf353f324d201a1d492e65cee568
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2749214
Commit-Queue: Danila Kuzmin <dkuzmin@google.com>
Reviewed-by: Denis Kuznetsov [CET] <antrim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#865215}